2001-08-18  Darin Adler  <darin@bentspoon.com>

	* Makefile.am: Removed extra -I directives.

2001-08-14  Michael Meeks  <michael@ximian.com>

	* Makefile.am: s/oaf/server/ fixup generation & translation
	issues & several other issues.

2001-02-07  Michael Meeks  <michael@ximian.com>

	* hello-embeddable.c (hello_bonobo_embeddable_construct): upd.

2001-02-06  Michael Meeks  <michael@ximian.com>

	* hello-view.c (hello_bonobo_view_get_type): upd.
	(hello_bonobo_view_factory): upd.

2001-01-18  Dietmar Maurer  <dietmar@ximian.com>

	* bonobo-hello.c: use the new factory macros

2001-01-16  Dietmar Maurer  <dietmar@ximian.com>

	* bonobo-hello.c (hello_bonobo_init): use the new unref code.

2000-12-28  Arturo Tena <arturo@directmail.org>

	* Bonobo_Sample_Hello.oafinfo: fix naming.

2000-12-14  Michael Meeks  <michael@helixcode.com>

	* Makefile.am (bin_PROGRAMS): upd.

2000-12-04  Joe Shaw  <joe@helixcode.com>

	* bonobo-hello.c: Use BonoboGenericFactory instead.

2000-12-04  Joe Shaw  <joe@helixcode.com>

	* bonobo-hello.c: Fix the build by including
	bonobo/bonobo-embeddable-factory.h since it was removed from bonobo.h.
	This should be fixed to use the generic factory.

2000-09-21  Michael Meeks  <michael@helixcode.com>

	* hello.oafinfo: switch to Bonobo/ObjectFactory.

2000-09-17  ERDI Gergo  <cactus@cactus.rulez.org>

	* hello.oafinfo: Added entry about Bonobo::Print implementation

2000-07-14  Michael Meeks  <michael@helixcode.com>

	* hello.oafinfo: make uuids match.

	* bonobo-hello.c (hello_bonobo_init): make uuids match

2000-07-12  Michael Meeks  <michael@helixcode.com>

	* bonobo-hello.c (main): add bonobo_shutdown.
	(server_factory_init): bind to the Orb.

	* hello-embeddable.c (hello_bonobo_embeddable_construct): use
	bonobo_object_unref not gtk_object_destroy.

	* hello-view.c (hello_bonobo_view_factory): ditto.

2000-07-07  Michael Meeks  <michael@helixcode.com>

	* hello.oafinfo: kill unimplemented ProgressiveDataSink I/F.
